[gd_scene load_steps=7 format=3 uid="uid://ckgo28irj11yy"]

[ext_resource type="Script" path="res://scenes/secret_story.gd" id="1_y15pm"]
[ext_resource type="Resource" uid="uid://c3v1sqr6lkhw" path="res://resources/dialog_2.tres" id="2_gdb5u"]
[ext_resource type="PackedScene" uid="uid://c4dnrwrwk2nah" path="res://ui/dialog_controller.tscn" id="2_jdkbr"]
[ext_resource type="Texture2D" uid="uid://c5ahl6yb705jg" path="res://textures/kenney_game-icons/forward.png" id="3_uqlpw"]

[sub_resource type="Gradient" id="Gradient_aqwnp"]
interpolation_mode = 2
colors = PackedColorArray(0, 0.27451, 0, 1, 0, 0.0745098, 0.458824, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fglll"]
gradient = SubResource("Gradient_aqwnp")
fill_to = Vector2(1, 1)

[node name="SecretStory" type="Node"]
script = ExtResource("1_y15pm")
story = ExtResource("2_gdb5u")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_fglll")

[node name="DialogController" parent="." instance=ExtResource("2_jdkbr")]

[node name="NextLineButton" type="TextureButton" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -50.0
offset_right = -18.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_uqlpw")
ignore_texture_size = true
stretch_mode = 6

[connection signal="animation_completed" from="DialogController" to="." method="_on_dialog_animation_completed"]
[connection signal="pressed" from="NextLineButton" to="." method="_on_next_pressed"]
